--- a/pen details.html
+++ b/pen details.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<form method="post" action="alert.html">
 <h1>pension details</h1>
 <label>pension amount:</label>
 <input type="text" name="amount"><br><br>
@@ -11,4 +12,4 @@
 <input type="text" name="person"><br><br>
 <label>area:</label>
 <input type="text" name="area"><br><br>
-<input type="submit" value="next">
+<td><button onclick="fun()">next</button></td>
